# metadata_driven_v2

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DATA_RETRIEVAL_SOURCES.md  ENVIRONMENT_SETUP.md  LANGFLOW_IMPLEMENTATION_GUIDE.md  LANGFLOW_NODE_CONNECTION_GUIDE.md  METADATA_AUTHORING_FLOW_GUIDE.md  METADATA_TEXT_INPUT_EXAMPLES.md  MONGODB_JSON_UPLOAD_GUIDE.md  V2_BASE_COMPLETION_REPORT_20260613.md  V2_DELIVERY_VALIDATION_REPORT.md  V2_LANGFLOW_CANVAS_WIRING_GUIDE.md  VALIDATION_QUESTIONS_AND_EXPECTED_BEHAVIOR.md  WEB_IMPLEMENTATION_GUIDE.md
langflow_components/: README.md
langflow_components/data_analysis_flow/: 00_analysis_request_loader.py  02_intent_prompt_builder.py  (+18 more)
metadata/: domain_items.json  regression_questions.json  table_catalog.json
reference_runtime/: analysis.py  dummy_data.py  planner.py
tests/: conftest.py  test_langflow_component_shape.py  test_langflow_llm_node_flow.py  test_main_flow_api_response_builder.py  test_metadata_authoring_flows.py  test_metadata_context_loader_mongodb.py  test_metadata_qa_flow.py  test_metadata_text_input_examples.py  test_mongodb_result_store_flow.py  test_mongodb_upload.py  test_pandas_executor_guards.py  test_reference_agent.py  test_session_state_flow.py  test_source_retrievers.py  test_split_flow_contracts.py  test_web_app_langflow_client.py  test_web_app_mock_api.py  test_web_session_state_store.py
tools/: upload_json_to_mongodb.py  validate_component_llm_flow.py  validate_env.py  validate_llm_in_loop.py
web_app/: app.py  langflow_client.py  mock_api.py  session_state_store.py
(+107 files in other folders)
