[project]
name = "metadata-driven-v2"
version = "0.1.0"
description = "Metadata-first Langflow-style manufacturing data query and pandas analysis agent."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
mongodb = [
  "pymongo>=4.6",
]
llm = [
  "langchain-google-genai",
]
all = [
  "pymongo>=4.6",
  "langchain-google-genai",
  "streamlit>=1.37",
]
web = [
  "streamlit>=1.37",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
